--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,6 @@
 ---
 import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
 
 const pageTitle = "About Me";
 
@@ -31,7 +32,7 @@ const textCase = "uppercase";
         <style define:vars={{skillColor, fontWeight, textCase}}>
             h1 {
                 color: skyBlue;
-                font-size: 3rem;
+                font-size: 3.5rem;
             }
             .skill {
                 color: var(--skillColor);
@@ -41,9 +42,7 @@ const textCase = "uppercase";
         </style>
 	</head>
 	<body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+        <Navigation />
 
 		<h1>My Astro Site</h1>
         <h1>About Me</h1>
