--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.css';
 import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 
 const pageTitle = "About Me";
 
@@ -17,7 +18,7 @@ const happy = true;
 const finished = false;
 const goal = 3;
 
-const skillColor = "blue";
+const skillColor = "#1973b8";
 const fontWeight = "bold";
 const textCase = "uppercase";
 ---
@@ -44,9 +45,7 @@ const textCase = "uppercase";
 	<body>
         <Navigation />
 
-		<h1>My Astro Site</h1>
-        <h1>About Me</h1>
-        <h2>... and my new Astro site!</h2>
+		<h1>{pageTitle}</h1>
 
         <p>I am working through Astro's introductory tutorial. This is the 2nd page on my website, and it's the 1st one I built myself!</p>
         <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
@@ -65,5 +64,6 @@ const textCase = "uppercase";
         <ul>
             {skills.map((skill) => <li class="skill">{skill}</li>)}
         </ul>
+        <Footer />
 	</body>
 </html>
