--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.css'
 import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 
 const pageTitle = "My Astro Learning Blog";
 ---
@@ -16,8 +17,7 @@ const pageTitle = "My Astro Learning Blog";
 	<body>
 		<Navigation />
 
-		<h1>Astro</h1>
-		<h1>My Astro Learning Blog</h1>
+		<h1>{pageTitle}</h1>
 
         <p>This is where I will post about my journey learning Astro.</p>
 
@@ -26,5 +26,6 @@ const pageTitle = "My Astro Learning Blog";
             <li><a href=/posts/post-2>Post 2</a></li>
             <li><a href=/posts/post-3>Post 3</a></li>
         </ul>
+        <Footer />
 	</body>
 </html>
