--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,6 +20,19 @@ h1 {
     font-size: 2.5rem;
 }
 
+.hamburger {
+    padding-right: 20px;
+    cursor: pointer;
+}
+  
+.hamburger .line {
+    display: block;
+    width: 40px;
+    height: 5px;
+    margin-bottom: 5px;
+    background-color: black;
+}
+
 .nav-links {
     width: 100%;
     top: 5rem;
@@ -61,5 +74,7 @@ h1 {
         display: inline-block;
         padding: 15px 20px;
     }
-  
+    .hamburger {
+        display: none;
+    }
 }
