--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,7 +37,7 @@ h1 {
     width: 100%;
     top: 5rem;
     left: 48px;
-    background-color: #415edf;
+    background-color: #7c8bcd;
     display: none;
     margin: 0;
 }
@@ -45,7 +45,7 @@ h1 {
 .nav-links a {
     display: block;
     text-align: center;
-    padding: 10px 0;
+    padding: 5px 0;
     text-decoration: none;
     font-size: 1.2rem;
     font-weight: bold;
@@ -54,7 +54,7 @@ h1 {
 }
   
 .nav-links a:hover, a:focus {
-    background-color: #415edf;
+    background-color: #7c8bcd;
 }
   
 .expanded {
@@ -74,6 +74,7 @@ h1 {
         display: inline-block;
         padding: 15px 20px;
     }
+
     .hamburger {
         display: none;
     }
