--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,10 +1,12 @@
 ---
+import BaseLayout from "./BaseLayout.astro";
 const { frontmatter } = Astro.props;
 ---
-<h1>{frontmatter.title}</h1>
-<p>Description: <em>{frontmatter.description}</em></p>
-<p>Written by <em>{frontmatter.author}</em></p>
-<p>Pusblished on: {frontmatter.pubDate.slice(0,10)}</p>
-<p>Tags: {frontmatter.tags.map((tag) => <em> #{tag}</em>)}</p>
-<img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
-<slot />
+<BaseLayout pageTitle={frontmatter.title}>
+    <p><b>Description:</b> <em>{frontmatter.description}</em></p>
+    <p><b>Written by</b> <em>{frontmatter.author}</em></p>
+    <p><b>Pusblished on:</b> {frontmatter.pubDate.slice(0,10)}</p>
+    <p><b>Tags:</b> {frontmatter.tags.map((tag) => <em> #{tag}</em>)}</p>
+    <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
+    <slot />
+</BaseLayout>
