--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -7,6 +7,6 @@ const { frontmatter } = Astro.props;
     <p><b>Written by</b> <em>{frontmatter.author}</em></p>
     <p><b>Pusblished on:</b> {frontmatter.pubDate.slice(0,10)}</p>
     <p><b>Tags:</b> {frontmatter.tags.map((tag) => <em> #{tag}</em>)}</p>
-    <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
+    <!-- <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} /> -->
     <slot />
 </BaseLayout>
